--- a/TeamFinder/src/app/nav-bar/party-viewer/party-viewer.component.css
+++ b/TeamFinder/src/app/nav-bar/party-viewer/party-viewer.component.css
@@ -1,20 +1,15 @@
 :host {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem 0;
+  height: 3rem;
 }
 
 .bar {
-  width: 100%;
   text-align: center;
-  padding: 0.5rem;
   background-color: #383241;
   border-radius: 10px;
   cursor: pointer;
   user-select: none;
+  padding: 0.5rem;
+  margin: 0.8rem;
 }
 
 .bar > div {
@@ -32,7 +27,6 @@
 
 .dropdown {
   position: absolute;
-  transform: translateY(calc(100% + 1rem - 2px));
   width: 33.33%;
   z-index: 1;
   background-color: #383241;
